# Contradiction-Detection-Research

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py  schemas.py
app/api/: contradiction_accuracy.py  detection.py  evaluate.py  evidence_length_accuracy.py  generation.py  importance_accuracy.py  metrics.py  multi_agent_discussion.py  proximity_accuracy.py  segmentation.py  sensitivity_analysis.py  summary.py  type_prediction.py
app/core/: config.py  db.py  llm_clients.py  llm_detection.py
app/evaluation/: evaluator.py  metrics.py
app/generation/: dataset_builder.py
app/prompts/: cot_instructions.py  data_generation.py  multi_agent_prompts.py  tasks.py
