[project]
name = "contradiction-rag-api"
version = "0.1.0"
description = "FastAPI app"
authors = [{ name = "Shimo-Kota" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.2.1",
    "scikit-learn>=1.5.0",
    "python-multipart>=0.0.9",
    "jinja2"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# 明示的にパッケージを指定
[tool.setuptools]
packages = ["app"]